# decent-sampler-editor

./: .gitignore  CMakeLists.txt  app-icon.rc.in  increment_build.cmake  installer.iss  last_project.json  out3.txt  patch_cmake.py  svg2ico.cpp  vcpkg.json
.github/workflows/: build.yml
Installer/: LICENSE.txt  download_bg.ps1  generate_bmp.ps1
docs/: 01_Architecture_and_Engineering.md  02_Features_and_Functionalities.md  03_Data_Models_and_Formats.md  04_Development_Sprints.md  avaliacao_servico.md  qa_decentsampler_conformidade.md  recursos_backend_nao_utilizados.md  ux_ui_report.md
plugins/: CMakeLists.txt
plugins/src/BitCrusher/: BitCrusher.uidesc  BitCrusherController.cpp  BitCrusherController.h  BitCrusherProcessor.cpp  BitCrusherProcessor.h  CMakeLists.txt  factory.cpp
plugins/src/Chorus/: CMakeLists.txt  Chorus.uidesc  ChorusController.cpp  ChorusController.h  ChorusProcessor.cpp  ChorusProcessor.h  ChorusUIDs.h  factory.cpp
plugins/src/Compressor/: CMakeLists.txt  Compressor.uidesc  CompressorController.cpp  CompressorController.h  CompressorProcessor.cpp  CompressorProcessor.h  factory.cpp
plugins/src/Delay/: CMakeLists.txt  Delay.uidesc  DelayController.cpp  DelayController.h  DelayProcessor.cpp  DelayProcessor.h  factory.cpp
plugins/src/Equalizer/: Biquad.h  CMakeLists.txt  Equalizer.uidesc  EqualizerController.cpp  EqualizerController.h  EqualizerProcessor.cpp  EqualizerProcessor.h  SpectrumCurveView.cpp  SpectrumCurveView.h  factory.cpp
plugins/src/Filter/: CMakeLists.txt  Filter.uidesc  FilterController.cpp  FilterController.h  FilterProcessor.cpp  FilterProcessor.h  factory.cpp
plugins/src/Gain/: CMakeLists.txt  Gain.uidesc  GainController.cpp  GainController.h  GainProcessor.cpp  GainProcessor.h  factory.cpp
plugins/src/Phaser/: CMakeLists.txt  Phaser.uidesc  PhaserController.cpp  PhaserController.h  PhaserProcessor.cpp  PhaserProcessor.h  factory.cpp
plugins/src/PitchShifter/: CMakeLists.txt  PitchShifter.uidesc  PitchShifterController.cpp  PitchShifterController.h  PitchShifterProcessor.cpp  PitchShifterProcessor.h  factory.cpp
plugins/src/Reverb/: CMakeLists.txt  Reverb.uidesc  ReverbController.cpp  ReverbController.h  ReverbProcessor.cpp  ReverbProcessor.h  factory.cpp
plugins/src/StereoSimulator/: CMakeLists.txt  StereoSimulator.uidesc  StereoSimulatorController.cpp  StereoSimulatorController.h  StereoSimulatorProcessor.cpp  StereoSimulatorProcessor.h  factory.cpp
plugins/src/WaveFolder/: CMakeLists.txt  WaveFolder.uidesc  WaveFolderController.cpp  WaveFolderController.h  WaveFolderProcessor.cpp  WaveFolderProcessor.h  factory.cpp
plugins/src/WaveShaper/: CMakeLists.txt  WaveShaper.uidesc  WaveShaperController.cpp  WaveShaperController.h  WaveShaperProcessor.cpp  WaveShaperProcessor.h  factory.cpp
src/: dll-metadata.rc.in  main.cpp  resources.qrc
src/audio/: AudioAnalyzer.cpp  AudioAnalyzer.h  AudioEngine.cpp  AudioEngine.h  AudioEngineExport.h  AudioMessage.h  AudioState.h  MidiEngine.cpp  MidiEngine.h  PlaybackSequencer.cpp  PlaybackSequencer.h  Vst3Host.cpp  Vst3Host.h  Vst3HostExport.h
src/audio/dsp/: AdsrEnvelope.cpp  AdsrEnvelope.h  LfoOscillator.cpp  LfoOscillator.h  Oscillator.cpp  Oscillator.h  StateVariableFilter.cpp  StateVariableFilter.h  VoiceProcessor.cpp  VoiceProcessor.h
src/commands/: AddNodeCommand.cpp  AddNodeCommand.h  ConnectionCommands.cpp  ConnectionCommands.h  ModifyPropertyCommand.cpp  ModifyPropertyCommand.h  MoveNodeCommand.cpp  MoveNodeCommand.h  RemoveNodeCommand.cpp  RemoveNodeCommand.h  UiCommands.cpp  UiCommands.h  ZoneCommands.cpp  ZoneCommands.h
src/core/: AppSettings.cpp  AppSettings.h  ApplicationController.cpp  ApplicationController.h  AudioGraphBuilder.cpp  AudioGraphBuilder.h  AutoMapper.cpp  AutoMapper.h  CoreLibExport.h  DatabaseManager.cpp  DatabaseManager.h  DsDom.cpp  DsDom.h  INodeVisitor.h  IUiVisitor.h  InitWorker.cpp  InitWorker.h  PresetManager.cpp  PresetManager.h  ProjectManager.cpp  ProjectManager.h  ProjectSerializer.cpp  ProjectSerializer.h  ThemePalette.cpp  ThemePalette.h  VstPluginManager.cpp  VstPluginManager.h
src/core/commands/: ModifyZonePropertyCommand.h
src/core/factories/: NodeFactory.cpp  NodeFactory.h  UiComponentFactory.cpp  UiComponentFactory.h
src/core/models/: AudioNodes.h  GraphStructures.h  ProjectStates.cpp  ProjectStates.h  SequenceStructures.h  UiComponents.h
src/core/serializers/: AudioStateSerializer.cpp  AudioStateSerializer.h  GraphSerializer.cpp  GraphSerializer.h  UiStateSerializer.cpp  UiStateSerializer.h
src/export/: BundleExporter.cpp  BundleExporter.h  ExportWorker.cpp  ExportWorker.h
src/themes/: dark.json  light.json
src/transpilers/: DecentSamplerTranspiler.cpp  DecentSamplerTranspiler.h  ITranspiler.h  SfzTranspiler.cpp  SfzTranspiler.h
src/transpilers/ds/: DsEffectBuilder.cpp  DsEffectBuilder.h  DsGroupBuilder.cpp  DsGroupBuilder.h  DsUiBuilder.cpp  DsUiBuilder.h
src/ui/: AboutDialog.cpp  AboutDialog.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  SplashScreen.cpp  SplashScreen.h  style.qss  style_light.qss  style_template.qss
src/ui/assets/: AssetManagerView.cpp  AssetManagerView.h
src/ui/canvas/: CanvasContextMenu.cpp  CanvasContextMenu.h  CanvasDragDropHandler.cpp  CanvasDragDropHandler.h  CanvasHeaderItem.cpp  CanvasHeaderItem.h  CanvasKeyboardItem.cpp  CanvasKeyboardItem.h  CanvasKeyboardPainter.cpp  CanvasKeyboardPainter.h  FilmstripRenderer.cpp  FilmstripRenderer.h  GraphConnectionItem.cpp  GraphConnectionItem.h  GraphNodeItem.cpp  GraphNodeItem.h  InstrumentCanvasView.cpp  InstrumentCanvasView.h  NodeGraphView.cpp  NodeGraphView.h  UiComponentItem.cpp  UiComponentItem.h  UiComponentItemFactory.cpp  UiComponentItemFactory.h  UiComponentItems.cpp  UiComponentItems.h
src/ui/code/: CodeEditorView.cpp  CodeEditorView.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h
src/ui/components/: CurveGraphWidget.cpp  CurveGraphWidget.h  CustomTitleBar.cpp  CustomTitleBar.h  EnvelopeGraphWidget.cpp  EnvelopeGraphWidget.h  FaderWidget.cpp  (+30 more)
tests/: CMakeLists.txt  main_test.cpp  test_loader.cpp
(+107 files in other folders)
